
TEST
- QuantExt: 263 test functions (vs 242 in the previous release)
- OREData: 203 test functions (vs. 199 in the previous release)
- OREAnalytics: 68 test functions (vs. 66 in the previous release)

DOCUMENTATION
- The user guide has grown from 440 to 480 pages, mainly due to the
  migration of Credit derivative instruments into ORE, as well as new examples

LANGUAGE BINDINGS
- The SWIG wrapper has been extended to provide access to ORE input
  construction in memory and to query in-memory results (reports etc), in line
  with the refactoring mentioned below.
  See the new Python example OREAnalytics-SWIG/Python/Examples/ore3.py
- To facilitate access to ORE Python, we are providing Python wheels for various
  OS types and Python versions starting with this release, thanks to Eric Ehlers's
  effort and Luigi Ballabio's support to get in up and running using github actions.
  See the ORE-SWIG repository for how to install the ORE module.

OTHER
- Refactor the serialization of NPV cube and market cube (aggregation scenario data)
- Refactor OREAnalytics/orea/app by separating input construction from processing
  and persisting results. This is to faciliate re-using the processing element
  (analyticsManager->runAnalytics(...)) in different applications, a command line
  application such as ore[.exe] that reads/writes from/to files, an ORE Python wrapper
  that receives input and provides results in memory (see language bindings above),
  or a REST service built around ORE. Results (reports, cubes etc) are stored in
  memory and only saved to files on demand. Inputs for the ORE processor can be
  assembled in memory, or read from files.


Changes for the 8th ORE release (1.8.8.0):
============================================

ORE 1.8.8.0 includes the following notable changes, details can be
found in the commits between September 2022 and December 2022.

INSTRUMENTS

- roll out Commodity derivatives, thanks to Acadia Inc., as announced in September 22: